--- a/assets/sass/cids-theme/styles/layout.sass
+++ b/assets/sass/cids-theme/styles/layout.sass
@@ -19,7 +19,7 @@ body:not(.page__home)
             .block-content
                 padding-left: 0 !important
                 margin: auto
-            .block:not(.block-title, .block-summary, .block-key_figures, .block-chapter--alt_background, .block-testimonials, .block-timeline, .block-projects, .block-agenda, .block-posts, .block-image.image-landscape, .block-persons, .block-organizations)
+            .block:not(.block-call_to_action, .block-title, .block-summary, .block-key_figures, .block-chapter--alt_background, .block-testimonials, .block-timeline, .block-projects, .block-agenda, .block-pages, .block-posts, .block-image.image-landscape, .block-persons, .block-organizations, .block-chapter--accent_background, .block-chapter--alt_background)
                 .block-content,
                 figure img
                     width: columns(6)
