--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -535,4 +535,5 @@ body:not(.page__home)
             .call_to_action
                 margin-right: var(--grid-gutter-negative)
                 > div
+                    padding-left: var(--grid-gutter)
                     margin-left: var(--grid-gutter-negative)
