--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -375,6 +375,7 @@ body:not(.page__home)
                 .block-content
                     width: 100%
                     .chapter
+                        gap: var(--grid-gutter)
                         .top
                             order: 1
                             .block-title
