--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -60,27 +60,29 @@ header#document-header
                             border-top-left-radius: 0
                             margin-left: -$spacing-2
                             padding-left: space(6)
-                    @include media-breakpoint-down(desktop)
-                        &.nav-search
+                    &.nav-search
+                        margin-left: $spacing-2
+                        @include media-breakpoint-down(desktop)
                             margin-left: auto
                 // Search icon
                 .pagefind-ui__toggle
                     &::after
+                        aspect-ratio: 1
                         line-height: 1
                         transition: background-color .3s ease, border-color .3s ease
+                        color: var(--color-background)
+                        border: 1px solid var(--color-background)
+                        border-radius: 100%
+                        padding: $spacing-1
+                    &:hover::after
+                        background-color: rgba($header-color, 0.2)
+                        border-color: transparent
                     @include media-breakpoint-up(desktop)
+                        align-items: center
                         display: flex
-                        justify-content: flex-end 
+                        justify-content: center
                         height: pxToRem(44)
                         padding: 0
-                        width: pxToRem(44)
-                        &::after
-                            border: 1px solid var(--color-text)
-                            border-radius: 100%
-                            padding: $spacing-1
-                        &:hover::after
-                            background-color: rgba($header-color, 0.2)
-                            border-color: transparent
         @include media-breakpoint-up(desktop)
             .menu
                 .nav-level-1:not(.upper-menu)
