--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -70,8 +70,8 @@ header#document-header
                         aspect-ratio: 1
                         line-height: 1
                         transition: background-color .3s ease, border-color .3s ease
-                        color: var(--color-background)
-                        border: 1px solid var(--color-background)
+                        color: var(--color-accent)
+                        border: 1px solid var(--color-accent)
                         border-radius: 100%
                         padding: $spacing-1
                     &:hover::after
