--- a/assets/sass/cids-theme/styles/toc.sass
+++ b/assets/sass/cids-theme/styles/toc.sass
@@ -25,6 +25,12 @@
             html:not(.is-scrolling-down) &
                 top: 0
                 transform: translateY(calc(var(--header-height) + #{$spacing-2}))
+    .toc-pages ol,
+    .sticky-toc
+        li
+            border-bottom: 1px solid $color-border
+            margin-top: 0
+            width: 100%
 
 // hide button when offcanva oppened
 .has-offcanvas-opened
@@ -56,9 +62,6 @@ body.offcanvas-toc
             ol
                 padding: calc(#{$spacing-4} + var(--grid-gutter))
                 li
-                    border-bottom: 1px solid $color-border
-                    margin-top: 0
-                    width: 100%
                     &:not(last-child)
                         margin-bottom: $spacing-1
                         padding-bottom: $spacing-1
@@ -81,8 +84,10 @@ body.offcanvas-toc
             .toc-in-content
                 height: fit-content
                 position: sticky
-                top: 0
+                top: var(--grid-gutter)
                 width: columns(3)
+                html:not(.is-scrolling-down) &
+                    top: calc(var(--header-height) + var(--grid-gutter))
                 > p
                     font-weight: bold
                     margin-bottom: $spacing-1
