--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -88,6 +88,7 @@ $body-overlay-color: rgba(0, 0, 0, 0.2)
 // Footer
 $footer-logo-height: pxToRem(90)
 $footer-logo-height-desktop: $footer-logo-height
+$zindex-footer: 1001
 
 // Spacing
 $space-unit: 4
