--- a/assets/sass/cids-theme/styles/footer.sass
+++ b/assets/sass/cids-theme/styles/footer.sass
@@ -1,4 +1,5 @@
 footer#document-footer
+    z-index: $zindex-footer
     .container 
         align-items: flex-end
         + .container:last-of-type
