--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -78,6 +78,7 @@ $header-logo-height: 50px
 $header-logo-height-desktop: 90px
 $header-border-bottom-width: 1
 $header-upper-menu-border-bottom: 0
+$zindex-header: 1001
 
 // Hero
 $hero-background-color: $color-background
