--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -95,6 +95,7 @@ header#document-header
             .menu
                 align-items: flex-end
                 .nav-level-1:not(.upper-menu)
+                    justify-content: flex-end
                     gap: $spacing-5
                     li
                         span,
