--- a/assets/sass/cids-theme/styles/hero.sass
+++ b/assets/sass/cids-theme/styles/hero.sass
@@ -6,6 +6,9 @@
         .hero-text
             text-align: center
             width: 100%
+            a.btn
+                white-space: initial
+                display: block
         figure
             margin-top: $spacing-5
             @include media-breakpoint-up(desktop)
