--- a/assets/sass/cids-theme/styles/hero.sass
+++ b/assets/sass/cids-theme/styles/hero.sass
@@ -6,9 +6,10 @@
         .hero-text
             text-align: center
             width: 100%
-            a.btn
-                white-space: initial
-                display: block
+            @include media-breakpoint-down(desktop)
+                a.btn
+                    white-space: initial
+                    display: block
         figure
             margin-top: $spacing-5
             @include media-breakpoint-up(desktop)
