--- a/assets/sass/cids-theme/styles/colors.sass
+++ b/assets/sass/cids-theme/styles/colors.sass
@@ -10,13 +10,22 @@ body
         --hero-color: var(--color-text)
         --color-text-alt: rgba(255,255,255, 0.8)
         // LAYOUT
+        .toc-container
+            --color-text: #{$color-text}
+            background: $color-background-alt
+        .toc-cta button
+            span,
+            &:after
+                color: var(--color-background)
         .hero
             background: var(--hero-background-color)
         // BLOCKS
         .block-pages article:not(:hover) .more
             border: pxToRem(1) solid rgba(255,255,255, 0.4) !important
-        .block-pages--cards .card
+        .block-pages--cards .card,
+        .block-pages--large .page:after
             background-color: $deep-blue-background-alt
+        .block-pages--cards .card
             &:hover
                 background-color: $color-electric-blue
                 &, a
@@ -27,12 +36,9 @@ body
                 .more
                     background-color: var(--color-text)
                     color: var(--color-accent)
-        .block-pages--large .page
-            &:after
-                background-color: $deep-blue-background-alt
+                    border-color: var(--color-text)
         .block-testimonials blockquote p
             color: var(--color-text)
-
 
     // normal pages
     &:not(.page-dark_blue_background)
