--- a/assets/sass/cids-theme/styles/layout.sass
+++ b/assets/sass/cids-theme/styles/layout.sass
@@ -5,12 +5,15 @@
         padding-right: $grid-margin
         --column-width: calc( (var(--grid-width) - (var(--grid-gutter) * 11 + calc(#{$grid-margin} * 2))) / 12)
 
-a, .link
-    &[target="_blank"]:not(.icon)
-        &::after
-            @include icon-site(external)
-            display: inline-block
-            margin-left: $spacing-1
+header,
+footer,
+.block:not(.block-contact)
+    a, .link
+        &[target="_blank"]:not(.icon)
+            &::after
+                @include icon-site(external)
+                display: inline-block
+                margin-left: $spacing-1
 
 // Bloc sizes
 body:not(.page__home)
