--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -115,6 +115,11 @@ $btn-hover-background: $color-accent
 // without sidebar 
 $block-space-y-desktop: space(30)
 
+// call to action / cta
+$block-call-to-action-accent-button-hover-background: rgba(255,255,255, 0.8)
+$block-call-to-action-accent-button-hover-border: 1px solid transparent
+$block-call-to-action-accent-button-hover-color: $color-text
+
 // key figures
 $block-key_figures-number-font-weight: normal
 
