--- a/assets/sass/cids-theme/styles/toc.sass
+++ b/assets/sass/cids-theme/styles/toc.sass
@@ -15,6 +15,7 @@
             width: auto
             z-index: 1000
             button::after
+                margin-left: space(2)
                 margin-right: 0
                 width: auto
             &.is-visible, &:focus, &:focus-visible
