wip layout persons

--- a/assets/sass/cids-theme/styles/layout.sass
+++ b/assets/sass/cids-theme/styles/layout.sass
@@ -55,3 +55,8 @@ body:not(.page__home)
                                 width: columns(5)
                             .media
                                 width: columns(5)
+
+// pagination
+.pagination
+    li a
+        line-height: $minimum-accessible-size
