--- a/assets/sass/cids-theme/theme.sass
+++ b/assets/sass/cids-theme/theme.sass
@@ -9,5 +9,6 @@
 @import "styles/hero"
 @import "styles/home"
 @import "styles/layout"
+@import "styles/persons"
 @import "styles/toc"
 @import "styles/search"
