wip: event page (at least not broken)

--- a/assets/sass/cids-theme/styles/hero.sass
+++ b/assets/sass/cids-theme/styles/hero.sass
@@ -40,7 +40,9 @@
 
     // post page
     .posts__page:not(.full-width),
-    .posts__page.full-width
+    .posts__page.full-width,
+    .events__page:not(.full-width),
+    .events__page.full-width
         .block-summary
             margin-left: offset(3)
         .post-sidebar > div
