--- a/assets/sass/cids-theme/styles/home.sass
+++ b/assets/sass/cids-theme/styles/home.sass
@@ -79,4 +79,6 @@
                 .person
                     flex: none
                     width: columns(3)
+                    @include media-breakpoint-up(xxl)
+                        width: columns(2)
                 
