--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -119,6 +119,14 @@ $block-space-y-desktop: space(30)
 $block-call-to-action-accent-button-hover-background: rgba(255,255,255, 0.8)
 $block-call-to-action-accent-button-hover-border: 1px solid transparent
 $block-call-to-action-accent-button-hover-color: $color-text
+// light version
+// $block-call-to-action-color: $color-text !default
+$block-call-to-action-button-background: transparent
+$block-call-to-action-button-border: pxToRem(1) solid var(--color-border)
+$block-call-to-action-button-color: var(--text-color)
+$block-call-to-action-button-hover-background: var(--color-accent)
+$block-call-to-action-button-hover-border: pxToRem(1) solid $block-call-to-action-button-hover-background
+$block-call-to-action-button-hover-color: var(--color-background)
 
 // key figures
 $block-key_figures-number-font-weight: normal
