--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -551,3 +551,5 @@ body:not(.page__home)
                 > div
                     padding-left: var(--grid-gutter)
                     margin-left: var(--grid-gutter-negative)
+    &--no_background
+        --cta-background-color: #{$color-background-alt}
