--- a/assets/sass/cids-theme/theme.sass
+++ b/assets/sass/cids-theme/theme.sass
@@ -4,6 +4,7 @@
 @import "_theme/hugo-osuny"
 @import "styles/colors"
 @import "styles/blocks"
+@import "styles/events"
 @import "styles/footer"
 @import "styles/header"
 @import "styles/hero"
