--- a/assets/sass/cids-theme/styles/hero.sass
+++ b/assets/sass/cids-theme/styles/hero.sass
@@ -30,6 +30,9 @@
     @include in-page-without-sidebar
         .lead
             width: columns(9)
+    @include media-breakpoint-down(desktop)
+        .container
+            padding: 0
 
 @include media-breakpoint-up(desktop)
     // sidebar
