--- a/assets/sass/cids-theme/styles/layout.sass
+++ b/assets/sass/cids-theme/styles/layout.sass
@@ -15,6 +15,10 @@ footer,
                 display: inline-block
                 margin-left: $spacing-1
 
+// hook : quote pattern before end -> only for js
+main > .quote-background
+    display: none
+
 // Bloc sizes
 body:not(.page__home)
     .document-content
