background color for grid pages and event at the and of a page for #18

--- a/assets/sass/cids-theme/styles/layout.sass
+++ b/assets/sass/cids-theme/styles/layout.sass
@@ -36,7 +36,8 @@ body:not(.page__home)
         .block:last-child
             &.block-pages,
             &.block-agenda
-                &--list
+                &--list,
+                &--grid
                     background-color: $color-background-alt
                     margin-bottom: 0
                     .block-content
