--- a/assets/sass/cids-theme/styles/toc.sass
+++ b/assets/sass/cids-theme/styles/toc.sass
@@ -118,3 +118,5 @@ body.offcanvas-toc
     @include media-breakpoint-down(desktop)
         .toc-in-content
             display: none
+        > .container
+            padding: 0
