--- a/assets/sass/cids-theme/styles/header.sass
+++ b/assets/sass/cids-theme/styles/header.sass
@@ -3,101 +3,106 @@ header#document-header
     nav
         @include media-breakpoint-up(desktop)
             + nav 
-                border-bottom: 1px solid $header-color
+                border-bottom: 1px solid rgba($header-color, 0.2)
                 padding-top: 0
                 > .container
                     align-items: flex-end
                     span,
                     a
                         padding: 0
-        .menu
-            flex-wrap: wrap
-            .nav-level-1:not(.upper-menu)
-                justify-content: flex-start
-                width: 100%
-                @include media-breakpoint-up(xl)
-                    flex: 1
-                    justify-content: flex-end
-                @include media-breakpoint-down(xl)
-                    padding-top: $spacing-4
-                    width: columns(12)
-            @include media-breakpoint-down(xl)
-                .logo
-                    img
-                        height: pxToRem(75)
-            .upper-menu.nav-level-1
+        &.upper-menu
+            .nav-level-1
                 gap: 0
+                align-items: center
                 justify-content: flex-start
                 margin-top: -($spacing-1)
+                @include media-breakpoint-down(desktop)
+                    padding-left: 0
+                    padding-right: 0
                 @include media-breakpoint-up(desktop)
                     justify-content: flex-end
                     margin-bottom: 0
+                    padding-top: $header-upper-menu-padding-y
                     width: columns(12)
                 > li
+                    line-height: 100%
                     > *
                         @include meta
-                    > a
-                        border-radius: pxToRem(20)
-                        padding: space() $spacing-2
-                        text-decoration: none
-                        &.active
-                            box-shadow: none
-                        @include media-breakpoint-up(desktop)
-                            padding: pxToRem(6) space(4)
-                            border-radius: pxToRem(30)
-                        &:not(.external-site)
-                            background: $header-color
-                            color: $header-background
-                        &.external-site
-                            background: rgba($header-color, 0.2) // --color accent
-                            color: $header-color
-                            &::after
-                                display: none
-                    &:first-of-type
-                        a
-                            padding-left: space(4)
-                        > a.external-site
-                            border-bottom-right-radius: 0
-                            border-top-right-radius: 0
-                            margin-right: -$spacing-2
-                            padding-right: space(7)
-                        > a:not(.external-site)
+                    &:not(.nav-search)
+                        @include media-breakpoint-down(desktop)
+                            height: auto
+                        > a
+                            border-radius: pxToRem(20)
+                            padding: space(2) $spacing-2
+                            text-decoration: none
+                            &.active
+                                box-shadow: none
                             @include media-breakpoint-up(desktop)
+                                padding: pxToRem(6) space(4)
+                                border-radius: pxToRem(30)
+                            @include media-breakpoint-down(desktop)
+                                line-height: inherit
+                            &:not(.external-site)
+                                background: $header-color
+                                color: $header-background
+                            &.external-site
+                                background: rgba($header-color, 0.2) // --color accent
+                                color: $header-color
+                                &::after
+                                    display: none
+                        &:first-of-type
+                            a
+                                padding-left: space(4)
+                            > a.external-site
+                                border-bottom-right-radius: 0
+                                border-top-right-radius: 0
+                                margin-right: -$spacing-2
+                                padding-right: space(7)
+                                @include media-breakpoint-down(desktop)
+                                    margin-right: -(space(5))
+                            > a:not(.external-site)
+                                @include media-breakpoint-up(desktop)
+                                    margin-left: -$spacing-2
+                        &:nth-child(2)
+                            > a.external-site
+                                border-bottom-left-radius: 0
+                                border-top-left-radius: 0
                                 margin-left: -$spacing-2
-                    &:nth-child(2)
-                        > a.external-site
-                            border-bottom-left-radius: 0
-                            border-top-left-radius: 0
-                            margin-left: -$spacing-2
-                            padding-left: space(7)
+                                padding-left: space(7)
                     &.nav-search
                         margin-left: $spacing-2
                         @include media-breakpoint-down(desktop)
                             margin-left: auto
-                // Search icon
-                .pagefind-ui__toggle
-                    &::after
-                        aspect-ratio: 1
-                        line-height: 1
-                        transition: background-color .3s ease, border-color .3s ease
-                        color: var(--color-accent)
-                        border: 1px solid var(--color-accent)
-                        border-radius: 100%
-                        padding: $spacing-1
-                    &:hover::after
-                        background-color: rgba($header-color, 0.2)
-                        border-color: transparent
-                    @include media-breakpoint-up(desktop)
-                        align-items: center
-                        display: flex
-                        justify-content: center
-                        height: pxToRem(44)
-                        padding: 0
-        @include media-breakpoint-up(desktop)
-            .menu
+            @include media-breakpoint-up(desktop)
+                + nav
+                    padding-top: 0
+            @include media-breakpoint-down(desktop)
+                > .container
+                    padding-left: var(--grid-gutter)
+                    padding-right: var(--grid-gutter)
+                    button#search-button
+                        margin-right: -1px
+    nav:not(.upper-menu)
+        > .container
+            align-items: flex-end
+        .menu
+            flex-wrap: wrap
+            @include media-breakpoint-down(xl)
+                .logo
+                    img
+                        height: pxToRem(75)
+            @include media-breakpoint-up(desktop)
                 align-items: flex-end
-                .nav-level-1:not(.upper-menu)
+                .nav-level-1
                     gap: $spacing-3
+                    justify-content: flex-start
+                    width: 100%
+                    @include media-breakpoint-up(xl)
+                        flex: 1
+                        justify-content: flex-end
+                    @include media-breakpoint-down(xl)
+                        padding-top: $spacing-4
+                        width: columns(12)
                     li
                         span,
                         a
@@ -105,28 +110,28 @@ header#document-header
                             padding-bottom: 0
                             &:first-of-type
                                 padding-left: 0
-        .nav-level-1:not(.upper-menu) 
-            .dropdown-menu.is-titled
-                @include media-breakpoint-up(desktop)
-                    padding-bottom: $spacing-5
-                    padding-top: $spacing-4
-                    .dropdown-menu-title
-                        @include h3
-                        @include link($header-color)
-                        text-decoration-color: rgba($header-color, .5)
-                        text-underline-offset: pxToRem(10)
-                        margin-bottom: $spacing-3
-                    .dropdown-menu-lead
-                        @include lead-hero
-                        font-size: $lead-hero-size
-                        line-height: $lead-hero-line-height
-                    .dropdown-heading
-                        margin-right: offset(1)
-                        width: columns(7)
-                    .nav-level-2
-                        padding-top: $spacing-4
-                        width: columns(4)
-                @include media-breakpoint-down(desktop)
+                    .dropdown-menu.is-titled
+                        @include media-breakpoint-up(desktop)
+                            padding-bottom: $spacing-5
+                            padding-top: $spacing-4
+                            .dropdown-menu-title
+                                @include h3
+                                @include link($header-color)
+                                text-decoration-color: rgba($header-color, .5)
+                                text-underline-offset: pxToRem(10)
+                                margin-bottom: $spacing-3
+                            .dropdown-menu-lead
+                                @include lead-hero
+                                font-size: $lead-hero-size
+                                line-height: $lead-hero-line-height
+                            .dropdown-heading
+                                margin-right: offset(1)
+                                width: columns(7)
+                            .nav-level-2
+                                padding-top: $spacing-4
+                                width: columns(4)
+            @include media-breakpoint-down(desktop)
+                .nav-level-1
                     .dropdown-heading
                         .dropdown-menu-title
                             @include h3
@@ -138,8 +143,3 @@ header#document-header
                                 padding: 0
                             + li
                                 padding-top: $spacing-2
-        @include media-breakpoint-down(desktop)
-            .menu
-                flex-wrap: nowrap
-                .upper-menu
-                    overflow-x: unset
