testimonials svg size

--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -298,6 +298,7 @@ body:not(.page__home)
             z-index: -1
             svg
                 height: 100%
+                width: calc( (var(--column-width) * 12) + var(--grid-gutter) * ( 12 - 1 ))
         .testimonials
             padding-bottom: $spacing-4
             padding-top: $spacing-5
