--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -555,16 +555,17 @@ body:not(.page__home)
 // images
 .block-image
     &.image-landscape
-        .container
-            margin-left: var(--grid-gutter-negative)
-            margin-right: var(--grid-gutter-negative)
-            padding: 0
-            width: 100%
-        figure
-            picture
-                img
-                    width: 100% !important
-                    object-fit: cover
+        @include media-breakpoint-up(desktop)
+            .container
+                margin-left: var(--grid-gutter-negative)
+                margin-right: var(--grid-gutter-negative)
+                padding: 0
+                width: 100%
+            figure
+                picture
+                    img
+                        width: 100% !important
+                        object-fit: cover
 
 // call to action
 .block-call_to_action
