event pages with blocks

--- a/assets/sass/cids-theme/styles/layout.sass
+++ b/assets/sass/cids-theme/styles/layout.sass
@@ -65,3 +65,9 @@ body:not(.page__home)
 .pagination
     li a
         line-height: $minimum-accessible-size
+
+// events page
+.events__section
+    .blocks
+        + .container
+            margin-bottom: $spacing-5
