--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -107,9 +107,10 @@ $icons-site: map-merge($icons-site, ("external": "\e900"))
 
 // Buttons
 $btn-min-width-desktop: pxToRem(134)
-$btn-padding-desktop: pxToRem(14) pxToRem(16)
+$btn-padding-desktop: pxToRem(12) pxToRem(20)
 $btn-hover-color: white
 $btn-hover-background: $color-accent
+$btn-border-radius: pxToRem(3)
 
 // Blocks
 // without sidebar 
