--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -578,3 +578,21 @@ body:not(.page__home)
                     margin-left: var(--grid-gutter-negative)
     &--no_background
         --cta-background-color: #{$color-background-alt}
+
+// block files/téléchargement/download
+.block-files
+    ul.files
+        @include in-page-with-or-without-sidebar
+            display: block
+        li
+            flex-direction: row-reverse
+            justify-content: space-between
+            &::before
+                @extend .button-accent
+                content: 'Download'
+                height: unset
+                width: unset
+                margin-right: 0
+            @include media-breakpoint-up(desktop)
+                figure
+                    width: columns(4)
